fix: carousel jumping / data link

--- a/src/styles/_token.scss
+++ b/src/styles/_token.scss
@@ -148,7 +148,6 @@
     width: 350px;
     height: 350px;
     margin-bottom: 20px;
-    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -157,6 +156,8 @@
     .contractImg {
       max-width: 100%;
       max-height: 100%;
+      min-height: auto;
+      min-width: auto;
     }
 
 }
@@ -169,32 +170,7 @@
         padding-bottom: 60px;
     }
 }
-// .tokenField {
-//     padding: 30px 50px 50px 50px;
-//     background-color: #F4F2F2;
+.carousel-inner>.item {
+    width: 100%;
 
-//     .imgBox {
-//         width: 350px;
-//         height: 350px;
-//         margin-bottom: 20px;
-        
-//         display: flex;
-//         justify-content: center;
-//         align-items: center;
-//         background-color: white;
-    
-//         .contractImg {
-//           max-width: 100%;
-//           max-height: 100%;
-//         }
-    
-//     }
-// }
-
-
-// @media (min-width:600px) {
-//     .cardsSection{
-//         min-width: 600px;
-//     }
-    
-// }
+}
